--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <!-- <script src="//code.jquery.com/jquery-1.11.0.min.js"></script> -->
 
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -21,101 +21,85 @@
     <h3 class="hdr text-center">FAQ</h3>
     <hr class="hr w-25 mx-auto" />
 
-    <div id="accordion w-25 mx-auto">
-      <div class="card w-25 mx-auto align-items-center">
-        <div class="card-header" id="headingOne">
-          <h5 class="mb-0">
-            <button
-              class="btn btn-link collapsed"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapseOne"
-              aria-expanded="true"
-              aria-controls="collapseOne"
-            >
-              Kim jestesmy
-            </button>
-          </h5>
-        </div>
-
+    <div class="accordion w-25 mx-auto" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button
+            class="accordion-button"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseOne"
+            aria-expanded="true"
+            aria-controls="collapseOne"
+          >
+            Kim jestesmy
+          </button>
+        </h2>
         <div
           id="collapseOne"
-          class="collapse"
+          class="accordion-collapse collapse"
           aria-labelledby="headingOne"
-          data-bs-parent="#accordion"
+          data-bs-parent="#accordionExample"
         >
-          <div class="card-body">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis
-            aliquid ea nostrum a reiciendis quos eaque voluptas quam eum officia
-            quidem doloribus quaerat accusamus distinctio fugiat, placeat
-            expedita nemo dolores.
+          <div class="accordion-body">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos eius cupiditate corrupti nihil officia quod veniam ipsa. Error modi magni non nesciunt, repudiandae numquam nemo neque blanditiis ipsa fuga ab.
+            </p>
           </div>
         </div>
       </div>
-
-      <div class="card w-25 mx-auto align-items-center">
-        <div class="card-header" id="headingTwo">
-          <h5 class="mb-0">
-            <button
-              class="btn btn-link collapsed"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapseTwo"
-              aria-expanded="false"
-              aria-controls="collapseTwo"
-            >
-              Kim jestesmy
-            </button>
-          </h5>
-        </div>
-
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseTwo"
+            aria-expanded="false"
+            aria-controls="collapseTwo"
+          >
+            Co robimy
+          </button>
+        </h2>
         <div
           id="collapseTwo"
-          class="collapse"
+          class="accordion-collapse collapse"
           aria-labelledby="headingTwo"
-          data-bs-parent="#accordion"
+          data-bs-parent="#accordionExample"
         >
-          <div class="card-body 2">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis
-            aliquid ea nostrum a reiciendis quos eaque voluptas quam eum officia
-            quidem doloribus quaerat accusamus distinctio fugiat, placeat
-            expedita nemo dolores.
+          <div class="accordion-body">
+           <p>
+             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos eius cupiditate corrupti nihil officia quod veniam ipsa. Error modi magni non nesciunt, repudiandae numquam nemo neque blanditiis ipsa fuga ab.
+           </p>
           </div>
         </div>
       </div>
-
-
-      <div class="card w-25 mx-auto align-items-center">
-        <div class="card-header" id="headingThree">
-          <h5 class="mb-0">
-            <button
-              class="btn btn-link collapsed"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapseThree"
-              aria-expanded="false"
-              aria-controls="collapseThree"
-            >
-              Co robimy
-            </button>
-          </h5>
-        </div>
-
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseThree"
+            aria-expanded="false"
+            aria-controls="collapseThree"
+          >
+            Co robimy
+          </button>
+        </h2>
         <div
           id="collapseThree"
-          class="collapse"
+          class="accordion-collapse collapse"
           aria-labelledby="headingThree"
-          data-bs-parent="#accordion"
+          data-bs-parent="#accordionExample"
         >
-          <div class="card-body three">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis
-            aliquid ea nostrum a reiciendis quos eaque voluptas quam eum officia
-            quidem doloribus quaerat accusamus distinctio fugiat, placeat
-            expedita nemo dolores.
+          <div class="accordion-body">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos eius cupiditate corrupti nihil officia quod veniam ipsa. Error modi magni non nesciunt, repudiandae numquam nemo neque blanditiis ipsa fuga ab.
+            </p>
           </div>
         </div>
-
-
-
-
-
+      </div>
     </div>
 
     <script src="js/script.js"></script>
